Fix alignment of planner

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,7 @@ body {
 table select {
   font-weight: 200 !important;
 }
+
+ul {
+  margin: 0;
+}
